# pyiss

./: README.md  pyproject.toml
examples/: test_v01.ipynb  test_v02.ipynb  test_v03.ipynb
src/pyiss/: __init__.py  constants.py  opus.py
src/pyiss/iss/: arithmetic.py  display.py  preview.py  set_object.py  sets.py
